test/data/syntax-errors/bad-statement.gs
Num x;
printes x;
9 - 2;
givesUs x;
